# randcode

./: .gitignore  README.md
algo-c/: README.md  binary-search-iterative.c  binary-search-recursive.c  linear-search.c  meson.build  sort.c
algo-c/lib/: .search.c.swp  binary-search.c  binary-search.h  jump-search.c  jump-search.h  linear-search.c  linear-search.h  my-rand.c  my-rand.h  search.c  search.h  sort.c  sort.h
septarr/: README.md
septarr/example/: example  example.c
septarr/src/: septarr.c  septarr.h
septarr_union/: README.md
septarr_union/example/: example.c
septarr_union/src/: septarr.c  septarr.h
septarr_void_pointer/: README.md
septarr_void_pointer/example/: example.c
septarr_void_pointer/src/: septarr.c  septarr.h
